# meowpunk_task

./: .gitignore  README.md  db.py  db_queries.py  extract.py  main.py  pyproject.toml
data/: cheaters.db
